--- a/styles.scss
+++ b/styles.scss
@@ -1,21 +1,25 @@
 /*-- scss:defaults --*/
 
 // Colors 
-$dark-green: #364539;
 $dark-grey: #474747;
 $sage: #94a699;
 $light-grey: #a9aba9;
-$cream: #FDFBF7;
 $dark-sage: #505e54;
 $light-green: #dff2e4;
 
+$dusty-pink: #9b7173;
+$cream: #FDFBF7;
+$sage2: #91a080;
+$dark-green: #223a2b;
+$blue-green: #1E4147;
+
 
 // base document colors
-$navbar-bg: $dark-sage;
-$navbar-fg: $light-green;
+$navbar-bg: $sage;
+$navbar-fg: $blue-green;
 $body-bg: $cream;
-$footer-bg: $light-grey;
-$link-color: $sage;
+$footer-bg: $dark-green;
+$link-color: $dusty-pink;
 
 // fonts
 @import url('https://fonts.googleapis.com/css2?family=Bitter&family=Montserrat&display=swap');
@@ -25,7 +29,7 @@ $link-color: $sage;
 
 h1, h2 {
   letter-spacing: 4px;
-  color: $dark-green;
+  color: $blue-green;
 }
 
   .title {
