--- a/light_styles.scss
+++ b/light_styles.scss
@@ -4,6 +4,7 @@
 $dark-grey: #474747;
 $sage: #94a699;
 $light-grey: #a9aba9;
+$lighter-grey: #d4d4d4;
 $dark-sage: #505e54;
 $light-green: #dff2e4;
 
@@ -23,11 +24,11 @@ $footer-bg: $dark-sage;
 $link-color: $dusty-pink;
 
 // Inline code
-$code-bg: $light-green;
-$code-color: $light-grey; 
+$code-bg: $lighter-grey;
+$code-color: $dark-green; 
 
 // Code blocks
-$code-block-bg: $dusty-pink;
+$code-block-bg: $cream;
 
 // fonts
 @import url('https://fonts.googleapis.com/css2?family=Bitter&family=Montserrat&display=swap');
