--- a/light_styles.scss
+++ b/light_styles.scss
@@ -50,4 +50,54 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
   }
   
+
+/* Style for the gallery images */
+.gallery-img {
+  width: auto; /* Set a fixed width for the gallery images */
+  height: 300px; /* Automatically adjust height while maintaining aspect ratio */
+  cursor: pointer; /* Cursor pointer on hover */
+}
+
+/* Style for the modal */
+.modal {
+  display: none;  /* Hidden by default */
+  position: fixed;
+  z-index: 9999; /* Ensure modal appears above other content */
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 110%;
+  overflow: auto; /* Enable scrolling if necessary */
+  background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
+  padding: 30px; /* Add padding for spacing */
+  box-sizing: border-box; /* Include padding and border in element's total width and height */
+}
+
+/* Style for modal content (image) */
+.modal-content {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  margin: auto;
+}
+
+/* Close button */
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: white;
+  font-size: 30px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+/* Ensure no scroll bar appears on the modal */
+body.modal-open {
+  overflow: hidden;
+}
+
+
+
+  
   
