--- a/light_styles.scss
+++ b/light_styles.scss
@@ -50,6 +50,12 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
   }
   
+/*--logo--*/
+.navbar-brand img { 
+  max-height: 40px;
+  width: auto;
+}
+  
 
 /* Style for the gallery images */
 .gallery {
