--- a/light_styles.scss
+++ b/light_styles.scss
@@ -71,6 +71,7 @@ h1, h2, h3, h4, h5, h6 {
   position: relative; /* Ensure positioning for overlay */
   transition: transform 0.2s; /* Smooth scaling on hover */
   transform: scale(0.97); /* Add image spacing */
+  -webkit-transform: scale(0.97); /* Vendor prefix for Chrome */
 }
 
 .gallery-img:hover {
@@ -82,8 +83,8 @@ h1, h2, h3, h4, h5, h6 {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: auto; /* Set a fixed width for the gallery images */
+  height: 300px; /* Automatically adjust height while maintaining aspect ratio */
   background-color: rgba(0, 0, 0, 0.7);
   color: white;
   padding: 10px;
